--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -9,7 +9,7 @@ on:
     paths: [ "**/java/**" ]
 
 jobs:
-  test_linked_list:
+  linked_list_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,7 +22,7 @@ jobs:
           cd data_structures/linked_lists/java
           mvn test
   
-  test_queue:
+  queue_test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,4 +33,17 @@ jobs:
       - name: Queue Tests
         run: |
           cd data_structures/queues/java
+          mvn test
+
+  stack_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Stack Tests
+        run: |
+          cd data_structures/stacks/java
           mvn test
