--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -9,7 +9,7 @@ on:
     paths: [ "**/java/**" ]
 
 jobs:
-  linked_list_test:
+  java_tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,29 +21,11 @@ jobs:
         run: |
           cd data_structures/linked_lists/java
           mvn test
-  
-  queue_test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Queue Tests
+      - name: Run Queue Tests
         run: |
           cd data_structures/queues/java
           mvn test
-
-  stack_test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-      - name: Stack Tests
+      - name: Run Stack Tests
         run: |
           cd data_structures/stacks/java
           mvn test
